Fixed layout bug.

--- a/sass/_config.scss
+++ b/sass/_config.scss
@@ -10,7 +10,7 @@
 /// Global Images Folder Path
 /// <br>*NOTE: This should be relative to the location the compiled css file will live.
 /// @type String
-$img-directory: '/styles/assets';
+$img-directory: '../../styles/assets';
 
 //*************************
 // THEME COLORS
